k8s-prod-02/monitoring/prometheus/karma.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karma
  labels:
    app.kubernetes.io/name: karma
spec:
  ingressClassName: traefik
  rules:
    - host: karma.frickel.earth
      http:
        paths:
          - backend:
              service:
                name: karma
                port:
                  number: 8080
            path: /
            pathType: Prefix
